src/components/Meanings.css
/* meanings-container is parent of tab-container */
.meanings-container {
  gap: 0.5rem;
}

.button-container {
  display: flex;
  justify-content: baseline;
  gap: 1rem;
}

.tab-button {
  display: flex;
  gap: 0.5rem;
  color: var(--color2);
  cursor: pointer;
  margin: var(--m-block);
  justify-content: start;
  background-color: transparent;
  outline: none;
  border: none;
  padding: 0.25rem 0.4rem;
  border-radius: 0.7rem;
  transition: all 0.1s ease;
}

.tab-button:focus,
.tab-button:hover {
  outline: 1px solid var(--color2);
}

.active {
  background-color: var(--color2);
  color: var(--color1);
}

.tab-item {
  width: max-content;
  border: 1px solid var(--color2);
  padding: 0 20px;
  border-radius: var(--main-raius);
  display: flex;
  justify-content: center;
  align-items: center;
}

